@@ -1,3 +1,9 @@
+Version ? (released ? ? ?, revision ?)
+
+ User-visible changes:
+ * working-copy to repository copies now work
+
+
 Version 0.16 (released 4 Dec 2002, revision 3987)
 
  User-visible changes:
